# gomoku_world

./: .editorconfig  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY.md  DIRECTORY.zh-CN.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.zh-CN.md  SECURITY.md  VERSION  docker-compose.yml  e version 1.0.0 Initial release of GomokuWorld && git tag -a v0.1.0 -m Release version 0.1.0 Project initialization  fix_chinese.py  fix_encoding.py  fix_encoding_v2.py  fix_encoding_v3.py  fix_encoding_v4.py  h origin master  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/linters/: pylintrc
.github/workflows/: ci.yml  main.yml
ci/docker/: Dockerfile.dev  Dockerfile.test
ci/kubernetes/: deployment.yaml  service.yaml
config/: game.yaml  test.yaml
deployment/: nginx.conf
deployment/kubernetes/: statefulset.yaml
docs/: DOCUMENTATION_GUIDELINES.md  README.md  api.md  development.md  index.md  installation.md
docs/api/: ai.md  core.md  gui.md
docs/dev/: architecture.md  contributing.md  development_guide.md
docs/examples/config/: README.md  basic_usage.py  file_operations.py
docs/guide/developer/: animation.md  architecture.md  contribution.md  i18n.md  multiplayer.md  network.md  performance.md  testing.md  theme.md
docs/guide/user/: faq.md  features.md  installation.md  quickstart.md
docs/guides/: config_best_practices.md  config_troubleshooting.md
docs/reference/api/: changelog.md  config.md  core.md  events.md  plugin.md  v2.1.2.md  v2.1.3.md
docs/release_notes/: v1.4.4.dev.beginner.md  v1.4.4.dev.professional.md  v1.4.4.user.md  v1.4.5.dev.beginner.md  v1.4.5.dev.beginner.zh-CN.md  v1.4.5.dev.professional.md  v1.4.5.dev.professional.zh-CN.md  v1.4.5.user.md  v1.4.5.user.zh-CN.md  v1.4.6.dev.md  v1.4.6.dev.zh-CN.md  v1.4.6.user.md  v1.4.6.user.zh-CN.md  v2.1.1.dev.md  v2.1.1.dev.zh-CN.md  v2.1.1.user.md  v2.1.1.user.zh-CN.md  v2.1.2.dev.md  v2.1.2.dev.zh-CN.md  v2.1.2.user.md  v2.1.2.user.zh-CN.md
docs/source/: api.rst  conf.py  configuration.rst  configuration_en.rst  index.rst  installation.rst  usage.rst
docs/source/api/: core.rst  gui.rst  network.rst  utils.rst
docs/source/guides/: configuration_best_practices.rst  configuration_migration.rst  configuration_troubleshooting.rst  configuration_validation.rst  development.rst  performance_optimization.rst  security.rst
docs/source/tutorials/: advanced.rst  getting_started.rst
docs/styles/: tutorial.css
docs/tutorials/: ai-basics.md  ai-development.md  api-usage.md  best-practices.md  configuration.md  contributing.md  debugging.md  deployment.md  environment-setup.md  game-rules.md  gui-basics.md  i18n.md  learning-path.md  network-basics.md  optimization.md  testing.md  theming.md  utils.md
docs/tutorials/getting-started/: advanced.md  basic.md  examples.md  interactive.md
docs/user/: getting_started.md
examples/: ai_game.py  basic_game.py  i18n_demo.py  network_i18n_demo.py  online_game.py
quality/bandit/: bandit.yaml
quality/black/: pyproject.toml
quality/flake8/: .flake8
quality/isort/: isort.cfg
quality/mypy/: mypy.ini
resources/: texts.json  theme.json
resources/config/: __init__.py  classic.json  config.json  logging_config.py  settings.py  theme.json
resources/i18n/: en.json  zh-CN.json
resources/i18n/en/: common.json  error.json  game.json  network.json  ui.json
resources/i18n/ja/: common.json  error.json  game.json  help.json  tutorial.json  ui.json
resources/i18n/ko/: common.json  error.json  game.json  help.json  tutorial.json  ui.json
resources/i18n/zh/: common.json  error.json  game.json  network.json  ui.json
scripts/: check_bilingual_docs.py  generate_tutorials.py  validate_translations.py  verify_i18n_integration.py
src/gomoku_world/: __init__.py  __main__.py  _version.py  game.py  i18n.py  theme.py
src/gomoku_world/config/: __init__.py  ai_config.py  base.py  constants.py  defaults.py  exceptions.py  instances.py  manager.py  settings.py  validation.py  validator.py
src/gomoku_world/core/: __init__.py  ai.py  board.py  game.py  rules.py  save_manager.py
src/gomoku_world/core/ai/: __init__.py  cache.py  engine.py  evaluation.py  instances.py  search.py  strategies.py  strategy.py  utils.py
src/gomoku_world/gui/: __init__.py  board.py  board_canvas.py  button.py  control_panel.py  game_list_window.py  gui.py  log_display.py  main_window.py  menu_bar.py  settings_menu.py  spectator_window.py  status_bar.py
src/gomoku_world/gui/widgets/: button.py
src/gomoku_world/i18n/: __init__.py  base.py  cache.py  config.py  constants.py  exceptions.py  manager.py  validator.py
src/gomoku_world/i18n/formatters/: __init__.py  string.py
src/gomoku_world/i18n/loaders/: __init__.py  base.py  ini.py  json.py  yaml.py
src/gomoku_world/i18n/tools/: __init__.py  translation_manager.py
src/gomoku_world/network/: __init__.py  client.py  errors.py  instances.py  network.py  server.py  spectator.py
src/gomoku_world/scripts/: __init__.py
src/gomoku_world/scripts/client/: __init__.py
src/gomoku_world/utils/: __init__.py  config.py  debug.py  fonts.py  i18n.py  imports.py  leaderboard.py  logger.py  network.py  resources.py  save_manager.py  sound.py
tests/: __init__.py  conftest.py  test_config.py  test_examples.py  test_game.py  test_game_config.py  test_network_i18n.py  test_network_monitor.py
tests/gui/: __init__.py  test_base.py  test_board.py  test_button.py  test_log_display.py  test_main_window.py
tests/integration/: test_game_flow.py  test_managers.py
tests/integration/core/: test_ai.py  test_ai_integration.py
tests/performance/: test_ai_performance.py  test_ai_speed.py  test_managers.py  test_system.py
tests/unit/: test_ai_core.py  test_board.py  test_config_manager.py  test_debug_manager.py  test_network_manager.py  test_rules.py
tests/unit/core/: test_ai.py
(+16 files in other folders)
