[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gomoku_world"
dynamic = ["version"]
description = "A modern implementation of the classic Gomoku (Five in a Row) game"
authors = [
    {name = "Gomoku World Team", email = "team@gomokuworld.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Board Games",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pygame>=2.5.2",
    "aiohttp>=3.8.5",
    "websockets>=11.0.3",
    "numpy>=1.24.0",
    "pandas>=2.0.3",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "colorlog>=6.7.0",
    "tqdm>=4.66.1",
    "numba>=0.57.1",
    "ujson>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.11.1",
    "flake8>=6.1.0",
    "pylint>=2.17.5",
    "mypy>=1.5.1",
    "black>=23.7.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/gomokuworld/gomoku_world"
Documentation = "https://gomokuworld.readthedocs.io/"
Repository = "https://github.com/gomokuworld/gomoku_world.git"
Issues = "https://github.com/gomokuworld/gomoku_world/issues"

[project.scripts]
gomoku-server = "gomoku_world.scripts.server:main"
gomoku-client = "gomoku_world.scripts.client:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "gomoku_world",
    "gomoku_world.core",
    "gomoku_world.gui",
    "gomoku_world.network",
    "gomoku_world.utils",
    "gomoku_world.scripts",
    "gomoku_world.scripts.server",
    "gomoku_world.scripts.client",
]

[tool.setuptools.package-data]
gomoku_world = [
    "resources/**/*",
    "config/**/*.yaml",
    "config/**/*.json",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["gomoku_world"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
packages = ["gomoku_world"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=gomoku_world --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
    "W0621",  # redefined-outer-name
    "W0703",  # broad-except
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311
isolated_build = True

[testenv]
deps =
    -r requirements-dev.txt
commands =
    pytest {posargs:tests}
"""

[tool.setuptools_scm]
write_to = "src/gomoku_world/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date" 