[metadata]
name = gomoku_world
version = 1.1.0
description = A modern implementation of the classic Gomoku (Five in a Row) game
long_description = file: README.md
long_description_content_type = text/markdown
author = Gomoku World Team
author_email = team@gomokuworld.com
url = https://github.com/gomokuworld/gomoku_world
project_urls =
    Documentation = https://gomokuworld.readthedocs.io/
    Source = https://github.com/gomokuworld/gomoku_world
    Tracker = https://github.com/gomokuworld/gomoku_world/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Board Games
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pygame>=2.5.2
    aiohttp>=3.8.5
    websockets>=11.0.3
    numpy>=1.24.0
    pandas>=2.0.3
    PyYAML>=6.0.1
    python-dotenv>=1.0.0
    colorlog>=6.7.0
    tqdm>=4.66.1
    numba>=0.57.1
    ujson>=5.8.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gomoku-server = gomoku_world.scripts.server:main
    gomoku-client = gomoku_world.scripts.client:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    pytest-benchmark>=4.0.0
    pytest-mock>=3.11.1
    flake8>=6.1.0
    pylint>=2.17.5
    mypy>=1.5.1
    black>=23.7.0
    isort>=5.12.0
docs =
    sphinx>=7.1.2
    sphinx-rtd-theme>=1.3.0
    sphinx-autodoc-typehints>=1.24.0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,*.egg-info

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -ra -q --cov=gomoku_world --cov-report=xml --cov-report=term-missing
asyncio_mode = auto 