[metadata]
name = gomoku_world
version = attr: gomoku_world._version.__version__
description = A modern Gomoku (Five in a Row) game
long_description = file: README.md, README.zh-CN.md
long_description_content_type = text/markdown
author = Gomoku World Team
author_email = support@gomokuworld.org
url = https://github.com/gomokuworld/gomoku_world
project_urls =
    Bug Tracker = https://github.com/gomokuworld/gomoku_world/issues
    Documentation = https://docs.gomokuworld.org
    Source Code = https://github.com/gomokuworld/gomoku_world
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications
    Environment :: Win32 (MS Windows)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Games/Entertainment :: Board Games
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    requests>=2.28.0
    pyqt6>=6.4.0
    torch>=2.0.0

[options.packages.find]
where = src

[options.package_data]
gomoku_world =
    resources/i18n/**/*.json
    resources/images/**/*
    resources/sounds/**/*
    resources/themes/**/*
    config/**/*.yaml
    config/**/*.json

[options.entry_points]
console_scripts =
    gomoku-world = gomoku_world.cli:main
gui_scripts =
    gomoku-world-gui = gomoku_world.gui:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = -v --cov=gomoku_world --cov-report=xml --cov-report=term-missing

[coverage:run]
source = gomoku_world
omit =
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203,W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100